--- a/faqs.html
+++ b/faqs.html
@@ -6,10 +6,11 @@
 
     <link rel="stylesheet" href="home.css">
     <link rel="stylesheet" href="faqs.css">
+
     <title>ReactNotes</title>
   </head>
   <body>
-    <header>
+    <header class="header-container">
       <div class="logo">
         <img src="/images/icons8-react-40.png" alt="React">
         <h2>ReactNotes</h2>
