--- a/theory.html
+++ b/theory.html
@@ -8,7 +8,7 @@
     <title>ReactNotes</title>
   </head>
   <body>
-    <header>
+    <header class="header-container">
       <div class="logo">
         <img src="/images/icons8-react-40.png" alt="React">
         <h2>ReactNotes</h2>
